# cc_logger

./: .codedocs  .gitignore  CMakeLists.txt  README.md
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
src/: logger.cc  logger.hh  main.cc
test/: CMakeLists.txt  logger_test.cc  user_data_test.cc  user_data_test.hh
